docs/v8.3/packages_api/data/featuretoggles.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "FeatureToggles"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## FeatureToggles interface

Describes available feature toggles in Grafana. These can be configured via the `conf/custom.ini` to enable features under development or not yet available in stable version.

<b>Signature</b>

```typescript
export interface FeatureToggles 
```
<b>Import</b>

```typescript
import { FeatureToggles } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  [accesscontrol](#accesscontrol-property) | <code>boolean</code> |  |
|  [fullRangeLogsVolume](#fullrangelogsvolume-property) | <code>boolean</code> |  |
|  [newNavigation](#newnavigation-property) | <code>boolean</code> |  |
|  [recordedQueries](#recordedqueries-property) | <code>boolean</code> |  |
|  [tempoBackendSearch](#tempobackendsearch-property) | <code>boolean</code> |  |
|  [tempoSearch](#temposearch-property) | <code>boolean</code> |  |
|  [tempoServiceGraph](#temposervicegraph-property) | <code>boolean</code> |  |
|  [trimDefaults](#trimdefaults-property) | <code>boolean</code> |  |

### accesscontrol property

<b>Signature</b>

```typescript
accesscontrol: boolean;
```

### fullRangeLogsVolume property

<b>Signature</b>

```typescript
fullRangeLogsVolume: boolean;
```

### newNavigation property

<b>Signature</b>

```typescript
newNavigation: boolean;
```

### recordedQueries property

<b>Signature</b>

```typescript
recordedQueries: boolean;
```

### tempoBackendSearch property

<b>Signature</b>

```typescript
tempoBackendSearch: boolean;
```

### tempoSearch property

<b>Signature</b>

```typescript
tempoSearch: boolean;
```

### tempoServiceGraph property

<b>Signature</b>

```typescript
tempoServiceGraph: boolean;
```

### trimDefaults property

<b>Signature</b>

```typescript
trimDefaults: boolean;
```
